2025-04-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Bind "`" to `meow-universal-argument'.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Improve `enable-minor-mode-in-project'

	* site-lisp/dotemacs-core.el (dotemacs--project-hook-function):
	Use args.  Add docstring.
	(project-add-hook!): Add docstring to the hook function.
	(project-remove-hook!): Add docstring.  Add default value for
	PROJECT.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (project-remove-hook!): Remove empty hooks.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (project-remove-hook!): New command.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* init.el <git-commit>: Hide log-edit files buffer after commit.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	Add new command `enable-minor-mode-in-project'

	* site-lisp/dotemacs-core.el
	(dotemacs--project-hook-function, project-add-hook!): Allow
	multiple functions to be added to a single hook.
	(emmip--minor-mode-history, emmip--major-modes-history): New variables.
	(dotemacs--major-mode-completion-table): New function.
	(enable-minor-mode-in-project): New command.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	Fix the incorrect buffer modified flag state

	* init.el <git-commit>: Do not overwrite standard-value of
	`git-commit-setup-hook'.
	(+git-commit--log-edit-h): Save the log buffer.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* init.el <xref>: Avoid overwrite standard values for
	`xref-after-jump-hook' and `xref-after-return-hook'.

2025-03-31  Zhengyi Fu  <i@fuzy.me>

	* templates/cc-mode.eld: Add snippets for writing tevent
	asynchronous operations.

2025-03-26  Zhengyi Fu  <i@fuzy.me>

	Improve Log-Edit support for Git-Commit mode

	* init.el (+git-commit--log-edit-h): Do not call `log-edit'.
	Directly set params and run `log-edit-hook'.

2025-03-26  Zhengyi Fu  <i@fuzy.me>

	* init.el: Remove names of keymaps.

2025-03-25  Zhengyi Fu  <i@fuzy.me>

	* init.el (+prism--set-colors): Wrap `modus-themes-with-colors'