@@ -1,5 +1,13 @@
 2025-04-01  Zhengyi Fu  <i@fuzy.me>
 
+	Remove command `prism-project'
+
+	* init.el (prism-project): Remove commmand.  Use
+	`enable-minor-mode-in-project' instead.
+	(prism-project-mode-history): Remove variable.
+
+2025-04-01  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (meow-setup): Bind "`" to `meow-universal-argument'.
 
 2025-04-01  Zhengyi Fu  <i@fuzy.me>
